@@ -39,8 +39,8 @@ public enum ProfileAccessStrategy implements com.google.protobuf.ProtocolMessage
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 0,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 ProfileAccessStrategy.class.getName());
     }
@@ -112,7 +112,7 @@ public enum ProfileAccessStrategy implements com.google.protobuf.ProtocolMessage
         return im.turms.server.common.access.client.dto.constant.ProfileAccessStrategyOuterClass
                 .getDescriptor()
                 .getEnumTypes()
-                .get(0);
+                .getFirst();
     }
 
     private static final ProfileAccessStrategy[] VALUES = values();
