@@ -17,29 +17,36 @@
 
 package unit.im.turms.server.common.infra.plugin;
 
+import java.io.InputStream;
+import java.net.URL;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
+import helper.ClassResource;
+import helper.JarUtil;
+import helper.ResourceUtil;
 import lombok.SneakyThrows;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.springframework.boot.SpringApplication;
 import org.springframework.context.ApplicationContext;
-import util.JarUtil;
 
 import im.turms.plugin.MyExtensionPoint;
+import im.turms.server.common.infra.application.TurmsApplicationContext;
+import im.turms.server.common.infra.cluster.node.Node;
 import im.turms.server.common.infra.cluster.node.NodeType;
 import im.turms.server.common.infra.cluster.service.rpc.RpcService;
-import im.turms.server.common.infra.context.TurmsApplicationContext;
+import im.turms.server.common.infra.plugin.ConflictedClassException;
 import im.turms.server.common.infra.plugin.PluginClassLoader;
 import im.turms.server.common.infra.plugin.PluginManager;
 import im.turms.server.common.infra.plugin.TurmsExtension;
 import im.turms.server.common.infra.property.TurmsProperties;
 import im.turms.server.common.infra.property.TurmsPropertiesManager;
+import im.turms.server.common.infra.property.constant.DuplicateClassLoadStrategy;
+import im.turms.server.common.infra.property.env.common.plugin.JavaPluginProperties;
 import im.turms.server.common.infra.property.env.common.plugin.PluginProperties;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -50,31 +57,35 @@ class JavaPluginManagerTests {
 
     private static final String JAR_NAME = "MyPluginForTest.jar";
     private static final Path JAR_FILE;
+    private static final String MY_EXTENSION_CLASS =
+            "unit.im.turms.server.common.infra.plugin.hidden.MyExtension";
+    private static final List<ClassResource> PLUGIN_CLASS_RESOURCES;
+    private static final List<String> PLUGIN_RESOURCES = List.of("plugin.yaml");
 
     static {
-        JAR_FILE = JarUtil.createJarFile(JAR_NAME,
-                List.of(SpringApplication.class,
-                        MyExtension.class,
-                        MyExtensionPoint.class,
-                        MyPlugin.class),
-                List.of("plugin.yaml"));
+        PLUGIN_CLASS_RESOURCES = Stream
+                .of(MY_EXTENSION_CLASS,
+                        "unit.im.turms.server.common.infra.plugin.hidden.MyPlugin",
+                        // Used to test class conflict.
+                        "im.turms.server.common.infra.thread.ThreadUtil")
+                .map(ResourceUtil::findTestClass)
+                .toList();
+        JAR_FILE = JarUtil.createJarFile(JAR_NAME, PLUGIN_RESOURCES, PLUGIN_CLASS_RESOURCES);
     }
 
-    @Disabled("legacy test and should be rewritten later")
     @Test
-    void shouldLoadPluginWithPluginLoader() {
+    void shouldLoadClasses_absentFromTurmsServer_definedInPluginJar_withPluginClassLoader() {
         MyExtensionPoint myExtensionPoint = getMyExtensionPoint();
 
-        assertThat(myExtensionPoint.getClass()).isNotEqualTo(MyExtension.class);
         assertThat(myExtensionPoint.getClass()
-                .getName()).isEqualTo(MyExtension.class.getName());
+                .getName()).isEqualTo(MY_EXTENSION_CLASS);
         assertThat(myExtensionPoint.getClass()
                 .getClassLoader()).isInstanceOf(PluginClassLoader.class);
     }
 
     @SneakyThrows
     @Test
-    void shouldLoadTurmsClassInPluginWithSystemLoader() {
+    void shouldLoadClasses_definedInTurmsServer_usedInPluginJar_withSystemLoader() {
         MyExtensionPoint myExtensionPoint = getMyExtensionPoint();
         // We don't declare "MyExtension" here because
         // "MyExtension" will be loaded by the system class loader
@@ -89,27 +100,16 @@ class JavaPluginManagerTests {
         assertThat(rpcServiceClass.getClassLoader()).isEqualTo(ClassLoader.getSystemClassLoader());
     }
 
-    @Disabled("legacy test and should be rewritten later")
     @SneakyThrows
     @Test
-    void shouldPreferClassesInPlugin() {
+    void shouldThrow_ifSameClassDefinedInBothTurmsServerAndPluginJar() {
         MyExtensionPoint myExtensionPoint = getMyExtensionPoint();
         TurmsExtension myExtension = (TurmsExtension) myExtensionPoint;
-        Object application = myExtension.getClass()
-                .getDeclaredField("application")
-                .get(myExtension);
-
-        assertThat(application.getClass()).isNotEqualTo(SpringApplication.class);
-        assertThat(application.getClass()
-                .getName()).isEqualTo(SpringApplication.class.getName());
-        assertThat(application.getClass()
-                .getClassLoader()).isInstanceOf(PluginClassLoader.class);
-
-        boolean testMethodRetVal = (boolean) application.getClass()
-                .getDeclaredMethod("test")
-                .invoke(application);
-
-        assertThat(testMethodRetVal).isTrue();
+        assertThatThrownBy(() -> {
+            myExtension.getClass()
+                    .getDeclaredMethod("getThreadUtilClass")
+                    .invoke(myExtension);
+        }).hasRootCauseExactlyInstanceOf(ConflictedClassException.class);
     }
 
     @SneakyThrows
@@ -123,26 +123,64 @@ class JavaPluginManagerTests {
         assertThat(testMethodRetVal).isTrue();
     }
 
+    @SneakyThrows
+    @Test
+    void shouldFindResourceInPluginSuccessfully() {
+        MyExtensionPoint myExtensionPoint = getMyExtensionPoint();
+        ClassLoader classLoader = myExtensionPoint.getClass()
+                .getClassLoader();
+        for (ClassResource resource : PLUGIN_CLASS_RESOURCES) {
+            URL url = classLoader.getResource(resource.binaryName());
+            assertThat(url).isNotNull();
+        }
+        for (String resource : PLUGIN_RESOURCES) {
+            URL url = classLoader.getResource(resource);
+            assertThat(url).isNotNull();
+
+            InputStream inputStream = classLoader.getResourceAsStream(resource);
+            assertThat(inputStream).isNotEmpty();
+        }
+    }
+
+    @SneakyThrows
+    @Test
+    void shouldFindResourceInTurmsServerSuccessfully() {
+        MyExtensionPoint myExtensionPoint = getMyExtensionPoint();
+        ClassLoader classLoader = myExtensionPoint.getClass()
+                .getClassLoader();
+
+        URL url = classLoader.getResource("plugin.js");
+        assertThat(url).isNotNull();
+
+        InputStream inputStream = classLoader.getResourceAsStream("plugin.yaml");
+        assertThat(inputStream).isNotEmpty();
+    }
+
     private MyExtensionPoint getMyExtensionPoint() {
+        Node node = mock(Node.class);
+        when(node.getNodeType()).thenReturn(NodeType.MOCK);
+
         ApplicationContext context = mock(ApplicationContext.class);
         TurmsApplicationContext applicationContext = mock(TurmsApplicationContext.class);
         when(applicationContext.getHome()).thenReturn(JAR_FILE.getParent()
                 .toAbsolutePath());
+
         TurmsPropertiesManager propertiesManager = mock(TurmsPropertiesManager.class);
         when(propertiesManager.getLocalProperties()).thenReturn(new TurmsProperties().toBuilder()
                 .plugin(new PluginProperties().toBuilder()
                         .enabled(true)
                         .dir(".")
+                        .java(new JavaPluginProperties().toBuilder()
+                                .duplicateClassLoadStrategy(
+                                        DuplicateClassLoadStrategy.THROW_EXCEPTION)
+                                .build())
                         .build())
                 .build());
-        PluginManager manager = new PluginManager(
-                NodeType.GATEWAY,
-                context,
-                applicationContext,
-                propertiesManager,
-                Collections.emptySet());
+
+        PluginManager manager =
+                new PluginManager(node, context, applicationContext, propertiesManager);
         return manager.getExtensionPoints(MyExtensionPoint.class)
-                .get(0);
+                .getFirst();
     }
 
 }
