@@ -19,11 +19,13 @@ package system.im.turms.service.domain.group.access.servicerequest.controller;
 
 import java.time.Duration;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
 import helper.NotificationUtil;
+import helper.SharedBusinessDataConst;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
@@ -35,6 +37,8 @@ import system.im.turms.service.domain.common.access.servicerequest.controller.Ba
 
 import im.turms.server.common.access.client.dto.constant.DeviceType;
 import im.turms.server.common.access.client.dto.constant.GroupMemberRole;
+import im.turms.server.common.access.client.dto.model.common.Value;
+import im.turms.server.common.access.client.dto.model.group.Group;
 import im.turms.server.common.access.client.dto.model.group.GroupJoinQuestion;
 import im.turms.server.common.access.client.dto.notification.TurmsNotification;
 import im.turms.server.common.access.client.dto.request.TurmsRequest;
@@ -72,7 +76,7 @@ import im.turms.service.domain.group.bo.GroupJoinStrategy;
 import im.turms.service.domain.group.bo.GroupUpdateStrategy;
 import im.turms.service.domain.group.po.GroupType;
 import im.turms.service.domain.group.service.GroupTypeService;
-import im.turms.service.domain.user.service.UserPermissionGroupService;
+import im.turms.service.domain.user.service.UserRoleService;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.MethodOrderer.OrderAnnotation;
@@ -88,7 +92,8 @@ import static im.turms.server.common.testing.Constants.ORDER_MIDDLE_PRIORITY;
 @TestMethodOrder(OrderAnnotation.class)
 class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceController> {
 
-    private static final long USER_ID = 1;
+    private static final long USER_ID_1 = 1;
+    private static final long USER_ID_2 = 4;
     private static final DeviceType USER_DEVICE = DeviceType.DESKTOP;
     private static final byte[] USER_IP = new byte[]{127, 0, 0, 1};
     private static final long REQUEST_ID = 1;
@@ -113,7 +118,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
     private GroupTypeService groupTypeService;
 
     @Autowired
-    private UserPermissionGroupService userPermissionGroupService;
+    private UserRoleService userRoleService;
 
     // Prepare data
 
@@ -162,9 +167,9 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         true)
                 .block(timeout);
 
-        userPermissionGroupService.queryStoredOrDefaultUserPermissionGroupByUserId(USER_ID)
-                .flatMap(permissionGroup -> userPermissionGroupService.updateUserPermissionGroups(
-                        Set.of(permissionGroup.getId()),
+        userRoleService.queryStoredOrDefaultUserRoleByUserId(USER_ID_1)
+                .flatMap(userRole -> userRoleService.updateUserRoles(Set.of(userRole.getId()),
+                        null,
                         Set.of(0L,
                                 groupTypeWithInvitationStrategyOwnerManager.getId(),
                                 groupTypeWithInvitationStrategyOwnerManagerRequiringApproval
@@ -189,7 +194,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setAnnouncement("announcement"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono, result -> {
@@ -210,7 +215,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setAnnouncement("announcement"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupRequest()
                 .handle(clientRequest);
 
@@ -231,7 +236,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setAnnouncement("announcement"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono, result -> {
@@ -252,7 +257,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                                 .build()))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupQuestionsRequest()
                 .handle(clientRequest);
         assertResultCodes(resultMono,
@@ -272,7 +277,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                                 .build()))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupQuestionsRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono, result -> {
@@ -280,8 +285,24 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
             List<Long> ids = data.getLongsWithVersion()
                     .getLongsList();
             assertThat(ids).hasSize(1);
-            groupJoinQuestionId = ids.get(0);
+            groupJoinQuestionId = ids.getFirst();
         });
+    }
+
+    @Test
+    @Order(ORDER_HIGH_PRIORITY)
+    void handleCreateGroupJoinRequestRequest_createJoinRequest_shouldThrowIfTheRequesterIsAlreadyMember() {
+        TurmsRequest request = TurmsRequest.newBuilder()
+                .setCreateGroupJoinRequestRequest(CreateGroupJoinRequestRequest.newBuilder()
+                        .setGroupId(groupIdWithInvitationStrategyOwnerManager)
+                        .setContent("content"))
+                .build();
+        ClientRequest clientRequest =
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
+        Mono<RequestHandlerResult> resultMono =
+                getController().handleCreateGroupJoinRequestRequest()
+                        .handle(clientRequest);
+        assertResultCodes(resultMono, ResponseStatusCode.GROUP_MEMBER_SEND_GROUP_JOIN_REQUEST);
     }
 
     @Test
@@ -293,7 +314,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setContent("content"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_2, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleCreateGroupJoinRequestRequest()
                         .handle(clientRequest);
@@ -313,7 +334,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setRole(GroupMemberRole.MEMBER))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupMembersRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -328,7 +349,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setUserId(GROUP_BLOCKED_USER_ID))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleCreateGroupBlockedUserRequest()
                         .handle(clientRequest);
@@ -345,7 +366,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setContent("content"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleCreateGroupInvitationRequestRequest()
                         .handle(clientRequest);
@@ -363,7 +384,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setContent("content"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleCreateGroupInvitationRequestRequest()
                         .handle(clientRequest);
@@ -376,15 +397,57 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
 
     @Test
     @Order(ORDER_MIDDLE_PRIORITY)
+    void handleUpdateGroupRequest_updateGroupWithWrongAttributeType_shouldSucceed() {
+        TurmsRequest request = TurmsRequest.newBuilder()
+                .setUpdateGroupRequest(UpdateGroupRequest.newBuilder()
+                        .setGroupId(groupIdWithInvitationStrategyOwnerManager)
+                        .setName("new name")
+                        .setIntro("new intro")
+                        .putAllUserDefinedAttributes(Map.of("key-bool",
+                                Value.newBuilder()
+                                        .setStringValue("A wrong value")
+                                        .build())))
+                .build();
+        ClientRequest clientRequest =
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
+        Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
+                .handle(clientRequest);
+        assertResultCodes(resultMono, ResponseStatusCode.ILLEGAL_ARGUMENT);
+    }
+
+    @Test
+    @Order(ORDER_MIDDLE_PRIORITY)
+    void handleUpdateGroupRequest_updateGroupWithUnknownAttribute_shouldSucceed() {
+        TurmsRequest request = TurmsRequest.newBuilder()
+                .setUpdateGroupRequest(UpdateGroupRequest.newBuilder()
+                        .setGroupId(groupIdWithInvitationStrategyOwnerManager)
+                        .setName("new name")
+                        .setIntro("new intro")
+                        .putAllUserDefinedAttributes(Map.of("key-unknown",
+                                Value.newBuilder()
+                                        .setStringValue("A wrong value")
+                                        .build())))
+                .build();
+        ClientRequest clientRequest =
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
+        Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
+                .handle(clientRequest);
+        assertResultCodes(resultMono, ResponseStatusCode.ILLEGAL_ARGUMENT);
+    }
+
+    @Test
+    @Order(ORDER_MIDDLE_PRIORITY)
     void handleUpdateGroupRequest_updateGroup_shouldSucceed() {
         TurmsRequest request = TurmsRequest.newBuilder()
                 .setUpdateGroupRequest(UpdateGroupRequest.newBuilder()
                         .setGroupId(groupIdWithInvitationStrategyOwnerManager)
                         .setName("new name")
-                        .setIntro("new intro"))
+                        .setIntro("new intro")
+                        .putAllUserDefinedAttributes(
+                                SharedBusinessDataConst.USER_DEFINED_ATTRIBUTES_FOR_UPSERT))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -400,7 +463,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setQuitAfterTransfer(false))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -408,7 +471,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
         request = TurmsRequest.newBuilder()
                 .setUpdateGroupRequest(UpdateGroupRequest.newBuilder()
                         .setGroupId(groupIdWithInvitationStrategyOwnerManager)
-                        .setSuccessorId(USER_ID)
+                        .setSuccessorId(USER_ID_1)
                         .setQuitAfterTransfer(false))
                 .build();
         clientRequest =
@@ -427,7 +490,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setMuteEndDate(System.currentTimeMillis() + 100_000))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -442,7 +505,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setMuteEndDate(0))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -458,7 +521,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .addAnswers("answers"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleUpdateGroupJoinQuestionRequest()
                         .handle(clientRequest);
@@ -475,7 +538,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setName("myname"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupMemberRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -491,7 +554,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setMuteEndDate(System.currentTimeMillis() + 100_000))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupMemberRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -507,7 +570,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setMuteEndDate(0))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupMemberRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -523,14 +586,17 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .addGroupIds(groupIdWithInvitationStrategyOwnerManager))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleQueryGroupsRequest()
                 .handle(clientRequest);
-        assertResultIsOk(resultMono,
-                result -> assertThat(result.response()
-                        .getGroupsWithVersion()
-                        .getGroups(0)
-                        .getId()).isEqualTo(groupIdWithInvitationStrategyOwnerManager));
+        assertResultIsOk(resultMono, result -> {
+            Group group = result.response()
+                    .getGroupsWithVersion()
+                    .getGroups(0);
+            assertThat(group.getId()).isEqualTo(groupIdWithInvitationStrategyOwnerManager);
+            assertThat(group.getUserDefinedAttributesMap()).containsExactlyInAnyOrderEntriesOf(
+                    SharedBusinessDataConst.EXPECTED_FOUND_USER_DEFINED_ATTRIBUTES);
+        });
     }
 
     @Test
@@ -541,7 +607,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setLastUpdatedDate(0))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleQueryJoinedGroupIdsRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono,
@@ -557,7 +623,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                 .setQueryJoinedGroupInfosRequest(QueryJoinedGroupInfosRequest.newBuilder())
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleQueryJoinedGroupsRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono,
@@ -576,7 +642,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setGroupId(groupIdWithInvitationStrategyOwnerManager))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleQueryGroupBlockedUserIdsRequest()
                         .handle(clientRequest);
@@ -594,7 +660,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setGroupId(groupIdWithInvitationStrategyOwnerManager))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleQueryGroupBlockedUsersInfosRequest()
                         .handle(clientRequest);
@@ -613,7 +679,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setGroupId(groupIdWithInvitationStrategyOwnerManagerRequiringApproval))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleQueryGroupInvitationsRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono,
@@ -631,7 +697,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setGroupId(groupIdWithInvitationStrategyOwnerManager))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleQueryGroupJoinRequestsRequest()
                         .handle(clientRequest);
@@ -651,7 +717,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setWithAnswers(true))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleQueryGroupJoinQuestionsRequest()
                         .handle(clientRequest);
@@ -671,7 +737,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setWithStatus(true))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleQueryGroupMembersRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono,
@@ -681,7 +747,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .stream()
                         .map(member -> member.getUserId())
                         .collect(Collectors.toList()))
-                        .containsExactlyInAnyOrder(USER_ID, GROUP_SUCCESSOR, GROUP_MEMBER_ID));
+                        .containsExactlyInAnyOrder(USER_ID_1, GROUP_SUCCESSOR, GROUP_MEMBER_ID));
     }
 
     @Test
@@ -694,7 +760,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setWithStatus(true))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleQueryGroupMembersRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono,
@@ -713,7 +779,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                                 .putQuestionIdToAnswer(groupJoinQuestionId, "answer"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleCheckGroupQuestionAnswerRequest()
                         .handle(clientRequest);
@@ -735,7 +801,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .addMemberIds(GROUP_MEMBER_ID))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleDeleteGroupMembersRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -750,7 +816,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .addQuestionIds(groupJoinQuestionId))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleDeleteGroupJoinQuestionsRequest()
                         .handle(clientRequest);
@@ -766,7 +832,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setUserId(GROUP_BLOCKED_USER_ID))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleDeleteGroupBlockedUserRequest()
                         .handle(clientRequest);
@@ -781,7 +847,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setInvitationId(groupInvitationId))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleDeleteGroupInvitationRequest()
                 .handle(clientRequest);
         assertResultCodes(resultMono,
@@ -797,7 +863,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setRequestId(groupJoinRequestId))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_2, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono =
                 getController().handleDeleteGroupJoinRequestRequest()
                         .handle(clientRequest);
@@ -815,7 +881,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setQuitAfterTransfer(false))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleUpdateGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
@@ -829,7 +895,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                         .setName("readyToDelete"))
                 .build();
         ClientRequest clientRequest =
-                new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+                new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         Mono<RequestHandlerResult> resultMono = getController().handleCreateGroupRequest()
                 .handle(clientRequest);
         AtomicLong readyToDeleteGroupId = new AtomicLong();
@@ -841,7 +907,7 @@ class GroupServiceControllerST extends BaseServiceControllerTest<GroupServiceCon
                 .setDeleteGroupRequest(DeleteGroupRequest.newBuilder()
                         .setGroupId(readyToDeleteGroupId.get()))
                 .build();
-        clientRequest = new ClientRequest(USER_ID, USER_DEVICE, USER_IP, REQUEST_ID, request);
+        clientRequest = new ClientRequest(USER_ID_1, USER_DEVICE, USER_IP, REQUEST_ID, request);
         resultMono = getController().handleDeleteGroupRequest()
                 .handle(clientRequest);
         assertResultIsOk(resultMono);
